fix dark mode & add previous button

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ input:-webkit-autofill:active {
 :root[data-theme="dark"] {
   color-scheme: dark;
   --gradient: linear-gradient(0deg, var(--bg) 90%, var(--bg-light));
+  --profile-gradient: 160deg, oklch(0.1 0.1 80), oklch(0.15 0.1 80), oklch(0.2 0.1 80);
   --radial-color: oklch(0.2 0.4 100);
   --bg-dark: oklch(0.1 0.075 80);
   --bg: oklch(0.15 0.075 80);
@@ -61,6 +62,7 @@ input:-webkit-autofill:active {
   --text: oklch(0.96 0.1 80);
   --text-muted: oklch(0.76 0.1 80);
   --highlight: oklch(0.2 0.2 20);
+  --highlight-hover: oklch(0.4 0.2 20);
   --border: oklch(0.4 0.15 80);
   --border-muted: oklch(0.3 0.15 80);
   --primary: oklch(0.76 0.15 80);
@@ -82,6 +84,18 @@ body {
 }
 
 @layer utilities {
+  @keyframes bounce-left {
+    0%,
+    100% {
+      transform: translateX(0);
+    }
+    50% {
+      transform: translateX(-8px);
+    }
+  }
+  .animate-bounce-left {
+    animation: bounce-left 1s ease-in-out infinite;
+  }
   .radial-overlay {
     position: relative;
     overflow: hidden;
@@ -117,8 +131,8 @@ body {
     z-index: 1;
   }
   .blur-bg {
-    border: 3px solid hsl(0, 0%, 100%, 0.3);
-    background: hsl(0, 0%, 100%, 0.2);
+    border: 3px solid hsl(0, 0%, 100%, 0.2);
+    background: hsl(0, 0%, 100%, 0.1);
     backdrop-filter: blur(2px);
     box-shadow: inset 0 0 8px hsl(0 0% 100% / 20%);
   }
